@@ -9,6 +9,7 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 XXX subroutine profiler docs need update
 XXX note here and doc goto behaviour
 XXX OP_SUBSTCONT
+XXX should add test for embedded src code, incl string eval
 
   Note: The file format has changed. Old files can't be read.
 
@@ -17,6 +18,7 @@ XXX OP_SUBSTCONT
   Fixed risk of infinite recursion if trace enabled and
     $SIG{__WARN__} was set to a code reference.
   Fixed subroutine recursion depth measurement.
+  Fixed missing embedded eval source code for some older perls.
 
   Changed ReadStream SUB_LINE_RANGE tag to SUB_INFO.
 
